# MagnetoSensor

./: .runsettings  CMakeLists.txt  MagnetoSensor.sln  MagnetoSensor.sln.DotSettings  README.md  keywords.txt  library.properties  post-build.cmd  vcpkg-configuration.json  vcpkg.json
lib/: CMakeLists.txt
src/: CMakeLists.txt  MagnetoSensor.cpp  MagnetoSensor.h  MagnetoSensorHmc.cpp  MagnetoSensorHmc.h  MagnetoSensorNull.h  MagnetoSensorQmc.cpp  MagnetoSensorQmc.h  SensorData.h  src.vcxproj
test/: CMakeLists.txt  Hmc5883LDemo.cpp  MagnetoSensorHmcTest.cpp  MagnetoSensorMock.cpp  MagnetoSensorMock.h  MagnetoSensorNullTest.cpp  MagnetoSensorQmcTest.cpp  MagnetoSensorTest.cpp  Qmc5883LDemo.cpp  SensorDataTest.cpp  test.vcxproj
